# corp-leadership

./: .pre-commit-config.yaml  Makefile  README.md  adobe.py  decorators.py  lib.py  main.py  mozilla.py  pyproject.toml
data/: adobe.json  adobe_2025-10-01_902c6e8.json  mozilla.json  mozilla_2025-10-01_fc9e53c.json
