[project]
name = "corp-leadership"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "parsel>=1.10.0"]

[dependency-groups]
dev = ["poethepoet>=0.37.0", "pre-commit>=4.3.0", "ruff>=0.13.2"]

[tool.ruff.lint]
extend-select = ["B", "I"]

[tool.poe.tasks]
# adobe = {shell="uv run adobe.py > data/adobe.json", help="Fetch Adobe leadership"}
# mozilla = {shell="uv run mozilla.py > data/mozilla.json", help="Fetch Mozilla leadership"}
# start.sequence = ["adobe", "mozilla"]
# start.ignore_fail = "return_non_zero"
# start.help = "Scrape all leadership pages"
# _lint = "
# _format = ""

lint.help = "Lint and format .py files"
lint.sequence = [
    { cmd = "uvx ruff check --fix" },
    { cmd = "uv format --preview-features format" },
]

[tool.poe.tasks.start]
sequence = ["adobe", "mozilla"]
ignore_fail = "return_non_zero"
help = "Scrape all leadership pages"

[tool.poe.tasks.adobe]
shell = "uv run adobe.py"
help = "Scrape Adobe leadership"

[tool.poe.tasks.mozilla]
shell = "uv run mozilla.py"
help = "Scrape Mozilla leadership"
